End of Section 4

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "data source=DESKTOP-NR0BU0I\\SQLEXPRESS;initial catalog=DatingApp;integrated security=True;MultipleActiveResultSets=True;"
   },
+  "TokenKey": "super secret unguessable key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
