--- a/API/API.csproj
+++ b/API/API.csproj
@@ -7,5 +7,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.5"/>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.11.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.6"/>
   </ItemGroup>
 </Project>
