--- a/API/API.csproj
+++ b/API/API.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.5"/>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.11.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.6"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1"/>
   </ItemGroup>
 </Project>
