--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "4.1.1",
     "bootswatch": "^5.0.1",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-loading": "^2.0.1",
     "ngx-spinner": "^0.0.2",
